# key2play

./: .git-blame-ignore-revs  .gitignore  .gitmodules  autoinstall.sh  config.py  create_release.sh  disable_ap.sh  enable_ap.sh  install_dev.sh  map.py  pyproject.toml  releases.json  requirements.txt  sdcard_backup.sh  visualizer.py
Docs/: manual_installation.md
config/: default_settings.xml
lib/: LCD_1in3.py  LCD_1in44.py  LCD_Config.py  LED_drivers.py  argument_parser.py  button_led.py  color_mode.py  colormaps.py  component_initializer.py  config.py  connectall.py  functions.py  gpio_handler.py  learnmidi.py  led_effects_processor.py  ledsettings.py  ledstrip.py  log_setup.py  menulcd.py  midi_event_processor.py  midiports.py  null_drivers.py  platform.py  rpi_drivers.py  savemidi.py  song_info.py  usersettings.py  webinterface_manager.py
tests/: LCD_1in44.py  LCD_Config.py  key_demo.py  learnmidi.py  lightkeys.py  printmidimessages.py  randomcolor.py  strandtest.py  test_screen.py  test_usersettings.py
webinterface/: __init__.py  crazy_sky_dist  static  views.py  views_api.py  views_settings.py
webinterface/templates/: index.html  ledsettings.html  lightmode.html  newpage.html  start.html
