[project]
name = "key2play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask~=2.3.2",
    "mido~=1.3.0",
    "numpy~=1.22",
    "pillow~=10.4.0",
    "psutil~=5.9.5",
    "python-rtmidi>=1.5.8",
    "requests>=2.32.3",
    "sqlalchemy~=2.0.39",
    "waitress~=3.0.1",
    "webcolors~=1.13",
    "websockets~=11.0.3",
    "werkzeug~=3.0.6",
]
